e2e/base/nacos.yml
apiVersion: v1
kind: Service
metadata:
  name: nacos-service
  namespace: e2e
spec:
  selector:
    app: nacos
  ports:
  - name: nacos
    port: 8848
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: e2e
  name: nacos
  labels:
    app: nacos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nacos
  template:
    metadata:
      labels:
        app: nacos
    spec:
      containers:
      - name: nacos
        image: docker.io/nacos/nacos-server:v1.4.6-slim
        ports:
        - containerPort: 8848
        env:
        - name: PREFER_HOST_MODE
          value: hostname
        - name: MODE
          value: standalone
        - name: JVM_XMS
          value: 256m
        - name: JVM_XMX
          value: 256m
        - name: JVM_XMN
          value: 128m
        - name: JAVA_TOOL_OPTIONS
          value: "-XX:-UseContainerSupport"
        readinessProbe:
          httpGet:
            path: /nacos/v1/ns/service/list?pageNo=1&pageSize=1
            port: 8848
          initialDelaySeconds: 10
          periodSeconds: 5
          failureThreshold: 24
